Prevent profile picture image jumping when loading

--- a/res/style.css
+++ b/res/style.css
@@ -30,10 +30,17 @@ h3 {
     background: #252D47;
 }
 
+#profile-image-wrapper {
+    max-width: 200px;
+    max-height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 8px;
+}
+
 .circular-image {
     max-width: 200px;
     max-height: 200px;
-    margin-top: 8px;
     border-radius: 150px;
     -webkit-border-radius: 150px;
     -moz-border-radius: 150px;
